✨ Add cardCount, page, pageCount to /cards respons
