# api/swagger.yml
@@ -72,9 +72,7 @@ paths:
                 200:
                     description: Returns the cards based on query. If there is no query, cards will be returned based on their manaCost in ascending order.
                     schema:
-                        type: array
-                        items:
-                             $ref: "#/definitions/card"
+                        $ref: "#/definitions/cards"
                 400:
                     description: The query is incorrect
                     schema:
@@ -114,6 +112,19 @@ definitions:
                 type: string
                 format: date-time
                 description: formatted as RFC 3339
+    cards:
+        type: object
+        properties: 
+            page:
+                type: integer
+            pageCount:
+                type: integer
+            cardCount:
+                type: integer
+            cards:
+                type: array
+                items:
+                    $ref: "#/definitions/card"
     card:
         type: object
         properties:
